@@ -67,7 +67,9 @@ void GtkPopupMenu::appendItem(GtkAction* action)
     gtk_widget_set_tooltip_text(menuItem, gtk_action_get_tooltip(action));
     g_signal_connect(menuItem, "select", G_CALLBACK(GtkPopupMenu::selectItemCallback), this);
     gtk_menu_shell_append(GTK_MENU_SHELL(m_popup.get()), menuItem);
-    gtk_widget_show(menuItem);
+
+    if (gtk_action_is_visible(action))
+        gtk_widget_show(menuItem);
 }
 
 void GtkPopupMenu::popUp(const IntSize& menuSize, const IntPoint& menuPosition, int itemCount, int selectedItem, const GdkEvent* event)
